--- a/hostsidetests/appsecurity/test-apps/EphemeralTestApp/EphemeralApp1/AndroidManifest.xml
+++ b/hostsidetests/appsecurity/test-apps/EphemeralTestApp/EphemeralApp1/AndroidManifest.xml
@@ -58,7 +58,18 @@
                 <action android:name="com.android.cts.ephemeraltest.START_EPHEMERAL" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="default-url"
+                       android:value="https://ephemeralapp1.cts.android.com/search" />
+            <meta-data
+                       android:name="android.app.searchable"
+                       android:resource="@xml/searchable" />
         </activity>
+        <provider android:name=".SearchSuggestionProvider"
+            android:authorities="com.android.cts.ephemeralapp1.Search" />
+
         <activity
             android:name=".EphemeralActivity2"
             android:theme="@android:style/Theme.NoDisplay">
