Fix a couple PIP CTS issues
- Ensure that we always wait for the activity to enter PIP if launched
  with the enter-PIP flag (an activity may be visible in computeState
  before it tries to enter PIP)
- Ensure that we always wait for the animation to complete if we are
  comparing bounds or aspect ratio
- Fix issue with offset being wrong with default PIP position gravity
  being moved to the top left (we should offset down and not up)
- Fix some cases where we are waiting for the wrong activity to enter PIP
- Skip testWindowButtonEntersPip in QuickStep
- Fix issue with testNoResumeAfterTaskOverlayFinishes due to old
  PINNED_STACK_ID being hardcoded
- Ensure TranslucentTestActivity is exported for use in tests

Bug: 71716434
Test: atest CtsActivityManagerDeviceTestCases:ActivityManagerPinnedStackTests

Change-Id: Iebd97b0764c790293d93ffe54d006d7dbadd9f20

Former-commit-id: 78b1d2558867af11e40bd475e4749d2e019ee9aa

--- a/tests/framework/base/activitymanager/app/AndroidManifest.xml
+++ b/tests/framework/base/activitymanager/app/AndroidManifest.xml
@@ -40,7 +40,9 @@
                 android:resizeableActivity="true"
                 android:supportsPictureInPicture="true"
                 android:configChanges="orientation|screenSize|smallestScreenSize|screenLayout"
-                android:theme="@style/Theme.Transparent" />
+                android:theme="@style/Theme.Transparent"
+                android:exported="true"
+        />
         <activity android:name=".VrTestActivity"
                 android:resizeableActivity="true"
                 android:exported="true"
