Add tests for slices permission model
While here add a few other tests/fix some others

Test: runtest --path cts/tests/tests/slice
^^ Note that atest doesn't always pick up changes...
Bug: 77323760

Change-Id: I7e43be5887babbb1a20bb1ecd0d10e6fd68d77c8

Former-commit-id: 26a56f66079a56509e57b892f86eaeeb3e64045d

--- a/tests/tests/slice/AndroidManifest.xml
+++ b/tests/tests/slice/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 android:icon="@drawable/size_48x48"
                 android:maxRecents="1"
                 android:multiArch="true"
-                android:supportsRtl="true">
+                android:supportsRtl="true"
+                android:debuggable="true">
         <uses-library android:name="android.test.runner" />
 
         <provider android:name=".SliceProvider"
