DO NOT MERGE (M) Test that changing groups prevents auto-granting
If a run time permission of a group is already granted we grant the
other permission of the group automatically when requested.

Hence if an already granted permission changed its group during an
update suddenly permission of a potentially not approved group will
get auto-granted.

This test makes sure that this won't happen anymore.

Test: atest android.permission.cts.PermissionGroupChange
Bug: 72710897
Change-Id: Ib2165d1ae53b80455ebe02e07775853e37a2e339

--- a/tests/tests/permission/AndroidManifest.xml
+++ b/tests/tests/permission/AndroidManifest.xml
@@ -18,6 +18,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.cts.permission">
 
+    <!-- for android.permission.cts.PermissionGroupChange -->
+    <permission android:name="android.permission.cts.B"
+                android:protectionLevel="dangerous"
+                android:label="@string/perm_b"
+                android:permissionGroup="android.permission.cts.groupB"
+                android:description="@string/perm_b" />
+
+    <!-- for android.permission.cts.PermissionGroupChange -->
+    <permission android:name="android.permission.cts.C"
+                android:protectionLevel="dangerous"
+                android:label="@string/perm_c"
+                android:permissionGroup="android.permission.cts.groupC"
+                android:description="@string/perm_c" />
+
+    <!-- for android.permission.cts.PermissionGroupChange -->
+    <permission-group android:description="@string/perm_group_b"
+                      android:label="@string/perm_group_b"
+                      android:name="android.permission.cts.groupB" />
+
+    <!-- for android.permission.cts.PermissionGroupChange -->
+    <permission-group android:description="@string/perm_group_c"
+                      android:label="@string/perm_group_c"
+                      android:name="android.permission.cts.groupC" />
+
     <uses-permission android:name="android.permission.INJECT_EVENTS" />
     <application>
         <uses-library android:name="android.test.runner" />
@@ -42,7 +66,7 @@
     -->
     <instrumentation android:name="android.support.test.runner.AndroidJUnitRunner"
                      android:targetPackage="com.android.cts.permission"
-                     android:label="CTS tests of com.android.cts.permission">
+                     android:label="CTS tests of android.permission">
         <meta-data android:name="listener"
             android:value="com.android.cts.runner.CtsTestRunListener" />
     </instrumentation>
