Allow stubs app to use cleartext
Test: atest android.app.cts.DownloadManagerTest
Fixes: 76113591
Change-Id: I5c4756d778009e9be15025e2199f543f90248641

Former-commit-id: d239bbd97dee3bc734053f87eb9b9d875497aa6c

--- a/tests/app/app/AndroidManifest.xml
+++ b/tests/app/app/AndroidManifest.xml
@@ -50,7 +50,8 @@
                 android:maxRecents="1"
                 android:multiArch="true"
                 android:name="android.app.stubs.MockApplication"
-                android:supportsRtl="true">
+                android:supportsRtl="true"
+                android:usesCleartextTraffic="true">
         <uses-library android:name="android.test.runner" />
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
