Added autofill test for custom highlight.
Test: atest LoginWithCustomHighlightActivityTest
Bug: 76103242

Change-Id: I273eaa974bc0bc81604a71338bec7b84ba333466

Former-commit-id: 771206bcd860b446e70f98125721764ff3fc04c3

--- a/tests/autofillservice/AndroidManifest.xml
+++ b/tests/autofillservice/AndroidManifest.xml
@@ -36,6 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PreFilledLoginActivity" />
+        <activity android:name=".LoginWithCustomHighlightActivity" />
         <activity android:name=".LoginWithStringsActivity" />
         <activity android:name=".WelcomeActivity" android:taskAffinity=".WelcomeActivity"/>
         <activity android:name=".ViewAttributesTestActivity" />
