--- a/hostsidetests/webkit/app/AndroidManifest.xml
+++ b/hostsidetests/webkit/app/AndroidManifest.xml
@@ -20,7 +20,9 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:maxRecents="1">
+    <application
+      android:maxRecents="1"
+      android:usesCleartextTraffic="true" >
         <uses-library android:name="org.apache.http.legacy" />
         <uses-library android:name="android.test.runner" />
         <activity android:name=".WebViewStartupCtsActivity"
