Uses a self-destruct receiver to kill an external process.
This test was previoulsy calling 'kill' directly, which just worked when the
tests were running as root.

Test: adb unroot && cts-tradefed run commandAndExit cts-dev -m CtsAutoFillServiceTestCase -t android.autofillservice.cts.SessionLifecycleTest#testDatasetGoesAwayWhenAutofilledAppIsKilled

Bug: 77280671
Fixes: 74618452

Change-Id: Ie35e774510b42467eade7e750e10cee7a9bb29de

--- a/tests/autofillservice/AndroidManifest.xml
+++ b/tests/autofillservice/AndroidManifest.xml
@@ -93,6 +93,10 @@
             android:taskAffinity="nobody.but.EmptyActivity"
             android:exported="true" />
 
+        <receiver android:name=".SelfDestructReceiver"
+            android:exported="true"
+            android:process="android.autofillservice.cts.outside"/>
+
         <service
             android:name=".InstrumentedAutoFillService"
             android:label="InstrumentedAutoFillService"
